--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Rocket Patrol</title>
 </head>
 <body>
+    <p>Game Loading...</p>
     <script src="./lib/phaser.js"></script>
     <script src="./src/main.js"></script>
 </body>
