--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <p>Game Loading...</p>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/Menu.js"></script>
+    <script src="./src/Play.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
