--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Patrol</title>
+    <style>
+        body {
+            background-color: beige;
+        }
+    </style>
 </head>
 <body>
-    <p>Game Loading...</p>
     <script src="./lib/phaser.js"></script>
     <script src="./src/Menu.js"></script>
     <script src="./src/Play.js"></script>
